--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,10 @@
 .nav-link {
   margin-right: 10px;
 }
+.nav-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
