--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ nav {
   align-items: center;
   position: relative;
   padding: 1.5rem 0;
-  background: #2fa1c8;
+  background: #00000099;
   border: 2px solid black;
 }
 
