--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
-  background-color: blanchedalmond;
+  background-color: hsla(0, 0%, 0%, 0.334);
   min-height: 100vh;
+  color: rgb(0, 0, 0);
 }
 
 .main-content {
