--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-nav {
+/* nav {
   display: flex;
   width: 100%;
   height: 10vmin;
@@ -8,8 +8,8 @@ nav {
   padding: 1.5rem 0;
   background: #00000099;
   border: 2px solid black;
-}
-
+} */
+/* 
 .nav-links {
   display: flex;
   list-style-type: none;
@@ -28,4 +28,4 @@ nav {
 }
 .loss {
   text-decoration: line-through;
-}
+} */
