--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-nav {
+/* nav {
   display: flex;
   width: 100%;
   height: 10vmin;
@@ -28,4 +28,4 @@ nav {
 }
 .loss {
   text-decoration: line-through;
-}
+} */
