--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,10 @@
 .main-content {
   padding-top: 64px;
 }
+.closeButtons {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: auto;
+  margin-right: auto;
+  gap: 8px;
+}
