--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,25 @@
-/* nav {
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
   display: flex;
   width: 100%;
-  height: 10vmin;
-  justify-content: space-around;
-  align-items: center;
-  position: relative;
-  padding: 1.5rem 0;
-  background: #00000099;
-  border: 2px solid black;
 }
 
-.nav-links {
-  display: flex;
-  list-style-type: none;
-  padding: 0;
+.col-12 {
+  flex: 1;
 }
-.nav-links ul {
-  display: flex;
-}
-.nav-links li {
-  margin-bottom: 10px;
-  padding-right: 7vmin;
+.match-card {
+  transition: background-color 0.3s, transform 0.3s;
+  border: solid black 1px;
+  margin: 5px;
 }
 
-.nav-links li:hover {
-  background-color: #ddd;
+.match-card:hover {
+  background-color: #f0f0f0;
+  cursor: pointer;
+  transform: translateY(-5px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-.loss {
-  text-decoration: line-through;
-} */
